k8s/aspirely-marketing-website-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspirely-marketing-website
  labels:
    app: aspirely-marketing-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspirely-marketing-website
  template:
    metadata:
      labels:
        app: aspirely-marketing-website
    spec:
      containers:
        - name: aspirely-marketing-website
          image: ghcr.io/aspirelyvn/aspirely.marketing-website:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          imagePullSecrets:
          - name: ghcr-secret
