k8s/aspirely-marketing-website-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspirely-marketing-website
spec:
  selector:
    app: aspirely-marketing-website
  ports:
    - port: 80
      targetPort: 3000
