k8s/aspirely-marketing-website-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspirely-marketing-website-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: aspirely.edu.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aspirely-marketing-website
                port:
                  number: 80
